# biliGoTicker

./: .gitignore  LICENSE  README.md  docker-compose.yml  go.mod  go.sum  master.Dockerfile  python.Dockerfile  worker.Dockerfile
cmd/master/: main.go
cmd/worker/: main.go
data/: README.md
docs/: 集群搭建参考.md
helm/: Chart.yaml  values.yaml
helm/templates/: gt-python-deployment.yaml  gt-python-service.yaml  ticket-master-deployment.yaml  ticket-master-service.yaml  ticket-worker-daemonset.yaml
internal/common/: constant.go  utils.go  utils_test.go
internal/master/: config.go  domain.go  server.go
internal/master/pb/: master.pb.go  master_grpc.pb.go
internal/worker/: buy.go  captcha.go  captcha_test.go  config.go  domain.go  register.go  request.go  server.go  utils.go  worker.go
internal/worker/pb/: worker.pb.go  worker_grpc.pb.go
proto/: master.proto  worker.proto
python/: README.md  main.py  pool_manager.py  pyproject.toml
