[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bili-ticket-gt-python==0.3.2",
    "fastapi[standard]>=0.115.12",
    "loguru>=0.7.3",
    "onnxruntime~=1.18.0",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "requests>=2.32.4",
    "scipy>=1.15.3",
]
[tool.mypy]
disable_error_code = ["import-untyped"]
check_untyped_defs = true
